<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d0dcd7"
    tools:context="com.udacity.myappportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/textView"
        android:textColor="#38555c"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spotify_Title"
        android:id="@+id/button"
        android:layout_marginTop="80dp"
        android:textColor="#ffffff"
        android:onClick="onClick"
        android:background="#F08C35"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:text="@string/Score_Title"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:onClick="onClick"
        android:background="#F08C35"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Library_Title"
        android:id="@+id/button3"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:onClick="onClick"
        android:background="#F08C35"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Build_Title"
        android:id="@+id/button4"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:onClick="onClick"
        android:background="#F08C35"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bacon_Title"
        android:id="@+id/button5"
        android:textColor="#ffffff"
        android:onClick="onClick"
        android:background="#F08C35"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:textColor="#ffffff"
        android:text="@string/Capstone_Title"
        android:onClick="onClick"
        android:background="#ef095d"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="16dp"/>
    </RelativeLayout>
</ScrollView>
